# gatewaze-modules

./: .npmrc  CLA.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  TRADEMARK.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
boilerplates/: init-and-tag.sh
boilerplates/gatewaze-template-newsletter/: README.md  gatewaze.theme.json  package.json
boilerplates/gatewaze-template-site/: README.md  gatewaze.theme.json  package.json  tailwind.config.ts
docs/: migration-consolidation.md
modules/_template/: index.ts  package.json  tsconfig.json
modules/accounts/: guide.md  index.ts  package.json
modules/ad-conversions/: .snapshot  guide.md  index.ts
modules/ai/: .snapshot  guide.md  index.ts  package.json  tsconfig.json
modules/ai-search/: package.json
modules/prefect/workers/prefect/: .dockerignore  Dockerfile  README.md  pyproject.toml
modules/prefect/workers/prefect/src/: __init__.py  config.py  cost_guard.py  main.py  rate_limiter.py  webhook.py
modules/prefect/workers/prefect/src/agents/: __init__.py  _common.py  discovery.py  processing.py  prompts.py  triage.py
modules/prefect/workers/prefect/src/clients/: __init__.py  firecrawl.py  supabase.py
modules/prefect/workers/prefect/src/flows/: __init__.py  discovery_pipeline.py  processing_pipeline.py  triage_pipeline.py
modules/prefect/workers/prefect/src/schemas/: __init__.py  discovery.py  processing.py  triage.py
modules/prefect/workers/prefect/src/tools/: __init__.py  github_search.py  rss_fetch.py  supabase_query.py
scripts/: bootstrap-module.sh
(+2378 files in other folders)
