[project]
name = "gatewaze-prefect-worker"
version = "0.1.0"
description = "Gatewaze Prefect worker — content discovery + (Phase 3) AI newsletter generation flows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Gatewaze" }]
dependencies = [
    # Orchestration
    "prefect>=3.0.0,<4.0.0",

    # Claude Agent SDK — runs the pipeline stages
    "claude-agent-sdk>=0.1.0",

    # HTTP + feed parsing
    "httpx>=0.27",
    "feedparser>=6.0.11",

    # Validation
    "pydantic>=2.7",

    # Supabase client (REST API via PostgREST)
    "supabase>=2.5",

    # Redis for rate limiting + coordination
    "redis>=5.0",

    # Optional: OpenAI SDK for Phase 3 newsletter generation.
    # Kept here so the same image works in both phases.
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
no_implicit_reexport = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
